added new sheet modes for shared and companion

--- a/Ironcrunch/src/components/header/character.pug
+++ b/Ironcrunch/src/components/header/character.pug
@@ -7,4 +7,4 @@ div.sheet-header
     div.sheet-character-role
       h3.sheet-character-title ROLE / TITLE
       input(type='text' class='sheet-pc-name' name='attr_character_role' placeholder='Character Role / Title')
-  include ../resources/resources
+  include ../resources/character
