--- a/Ironcrunch/src/pages/character/bonds.pug
+++ b/Ironcrunch/src/pages/character/bonds.pug
@@ -1,4 +1,4 @@
 input(type='radio' name='attr_character_page' class='sheet-bonds sheet-hide' value='3')
 div.sheet-bonds.sheet-hide
   h3.sheet-divide &emsp;BONDS&emsp;
-  include ../components/bonds/track
+  include ../../components/bonds/track
