--- a/Ironcrunch/src/pages/index.pug
+++ b/Ironcrunch/src/pages/index.pug
@@ -1,14 +1,25 @@
-div.sheet-modes
-  label.sheet-mode CHARACTER
-    input(type='radio' name='attr_mode_button' class='sheet-hide' value='1')
+input(type='checkbox' name='attr_modes_choice' class='sheet-modes-show sheet-hide' checked)
+div.sheet-modes-show.sheet-hide
+  div.sheet-mode-title
+    h2.sheet-mode-title SELECT THE SHEET TYPE
+  div.sheet-modes
+    label.sheet-mode CHARACTER
+      input(type='radio' name='attr_mode_button' class='sheet-hide' value='1')
 
-  label.sheet-mode COMPANION
-    input(type='radio' name='attr_mode_button' class='sheet-hide' value='2')
+    label.sheet-mode COMPANION
+      input(type='radio' name='attr_mode_button' class='sheet-hide' value='2')
+    
+    label.sheet-mode SHARED
+      input(type='radio' name='attr_mode_button' class='sheet-hide' value='3')
 
 input(type='radio' name='attr_mode' class='sheet-character-mode sheet-hide' value='1')
 div.sheet-character-mode.sheet-hide
-  include ./character
+  include ./character/index
 
 input(type='radio' name='attr_mode' class='sheet-companion-mode sheet-hide' value='2')
 div.sheet-companion-mode.sheet-hide
-  include ./companion
+  include ./companion/index
+
+input(type='radio' name='attr_mode' class='sheet-shared-mode sheet-hide' value='3')
+div.sheet-shared-mode.sheet-hide
+  include ./shared
