--- a/Ironcrunch/src/pages/index.styl
+++ b/Ironcrunch/src/pages/index.styl
@@ -1,3 +1,28 @@
+.sheet-modes
+  display flex
+  justify-content space-evenly
+
+h2.sheet-mode-title
+  text-align center
+
+div.sheet-mode-title
+  margin-bottom 2em
+
+.sheet-mode
+  text-align center
+
+label.sheet-mode
+  border 2px solid #4C4D4F
+  margin 0em 1em 0em 1em
+  padding 0
+  cursor pointer
+  &:hover
+    background #ccc
+
 input[type=radio].sheet-character-mode:checked ~ div.sheet-character-mode,
-input[type=radio].sheet-companion-mode:checked ~ div.sheet-companion-mode
+input[type=radio].sheet-companion-mode:checked ~ div.sheet-companion-mode,
+input[type=radio].sheet-shared-mode:checked ~ div.sheet-shared-mode
+  display block
+
+input[type=checkbox].sheet-modes-show:checked ~ div.sheet-modes-show
   display block
