--- a/Ironcrunch/src/roll-templates/mixins/outcomes.pug
+++ b/Ironcrunch/src/roll-templates/mixins/outcomes.pug
@@ -1,19 +1,24 @@
 mixin opportunity
-  tr
-    td(colspan="2" class="sheet-subfooter sheet-opportunity") OPPORTUNITY
+  div.sheet-result-row.sheet-roll-outcome
+    div.sheet-opportunity
+    div.sheet-subfooter OPPORTUNITY
 
 mixin strongHit
-  tr
-    td(colspan="2" class="sheet-subfooter sheet-strong-hit") STRONG HIT
+  div.sheet-result-row.sheet-roll-outcome
+    div.sheet-strong-hit
+    div.sheet-subfooter STRONG HIT
 
 mixin weakHit
-  tr
-    td(colspan="2" class="sheet-subfooter sheet-weak-hit") WEAK HIT
+  div.sheet-result-row.sheet-roll-outcome
+    div.sheet-weak-hit
+    div.sheet-subfooter WEAK HIT
 
 mixin miss
-  tr
-    td(colspan="2" class="sheet-subfooter sheet-miss") MISS
+  div.sheet-result-row.sheet-roll-outcome
+    div.sheet-miss
+    div.sheet-subfooter MISS
 
 mixin complication
-  tr
-    td(colspan="2" class="sheet-subfooter sheet-complication") COMPLICATION
+  div.sheet-result-row.sheet-roll-outcome
+    div.sheet-complication
+    div.sheet-subfooter COMPLICATION
