--- a/Ironcrunch/src/roll-templates/moves/moves.pug
+++ b/Ironcrunch/src/roll-templates/moves/moves.pug
@@ -4,7 +4,8 @@ include ../mixins/headers
 include ../mixins/body
 
 rolltemplate.sheet-rolltemplate-ironcrunch_moves 
-  table
+  //- table
+  div.sheet-roll-container
     | {{#action}}
     +actionHeader
     | {{#rollLess() momentum 0}}
@@ -89,16 +90,14 @@ rolltemplate.sheet-rolltemplate-ironcrunch_moves
     | {{/action}}
     | {{#custom}}
     | {{#header}}
-    tr
-      td(colspan="2" class="sheet-subheader") {{header}}
+    div.sheet-result-row
+      div.sheet-subheader {{header}}
     | {{/header}}
-    tr
-      th(colspan="2") {{name}}  
+    div.sheet-result-row
+      div {{name}}  
     | {{#allprops() custom name header}}
-    tr
-      td
-        span {{key}}
-      td
-        span {{value}}
+    div.sheet-result-row
+      div {{key}}
+      div {{value}}
     | {{/allprops() custom name header}}
     | {{/custom}}
