--- a/Ironcrunch/src/roll-templates/progress/progress.pug
+++ b/Ironcrunch/src/roll-templates/progress/progress.pug
@@ -3,7 +3,7 @@ include ../mixins/body
 include ../mixins/outcomes
 
 rolltemplate.sheet-rolltemplate-ironcrunch_progress
-  table
+  div.sheet-roll-container
     | {{#vow}}
     +vowHeader 
     +vowBody
