--- a/Ironcrunch/src/roll-templates/template.styl
+++ b/Ironcrunch/src/roll-templates/template.styl
@@ -1,31 +1,118 @@
+@import './mixins/outcomes'
+sub-base(background, padding)
+  line-height 0.9em
+  font-style italic
+  font-weight 900
+  text-align left
+  padding padding
+  background-color background
+
+name-base(align)
+  padding 0.2em 1em 0.2em 1em
+  text-align align
+  font-variant-caps all-small-caps
+
 .sheet-rolltemplate-ironcrunch_delve .sheet-rarity-die
-  border-top: 2px solid #000000
-  color: #ffffff
-  background-color: #6a286a
-  border-bottom: 2px solid #000000
+  border-top 2px solid #000000
+  background-color #6a286a
+  border-bottom 2px solid #000000
 
 .sheet-rolltemplate-ironcrunch_oracles .sheet-oracle-dice,
 .sheet-rolltemplate-ironcrunch_delve .sheet-oracle-dice,
 .sheet-rolltemplate-ironcrunch_delve_oracles .sheet-oracle-dice
-  width: 2em
-  border-right: 1px solid
-  background: #bfbfbf
+  width 2em
+  border-right 1px solid
+  background #bfbfbf
 
 .sheet-rolltemplate-ironcrunch_oracles .sheet-oracle-dice span,
 .sheet-rolltemplate-ironcrunch_delve .sheet-oracle-dice span,
 .sheet-rolltemplate-ironcrunch_delve_oracles .sheet-oracle-dice span
-  border: 0px !important
+  border 0px !important
 
 .sheet-rolltemplate-ironcrunch_oracles .sheet-oracle-double-dice,
 .sheet-rolltemplate-ironcrunch_delve .sheet-oracle-double-dice,
 .sheet-rolltemplate-ironcrunch_delve_oracles .sheet-oracle-double-dice
-  width: 5.7em
-  border-right: 1px solid
-  text-align: center
-  background: #bfbfbf
-  padding: 0.1em
+  width 5.7em
+  border-right 1px solid
+  text-align center
+  background #bfbfbf
+  padding 0.1em
 
 .sheet-rolltemplate-ironcrunch_oracles .sheet-oracle-double-dice span,
 .sheet-rolltemplate-ironcrunch_delve .sheet-oracle-double-dice span,
 .sheet-rolltemplate-ironcrunch_delve_oracles .sheet-oracle-double-dice span
-  border: 0px !important
+  border 0px !important
+
+.sheet-rolltemplate-ironcrunch_moves .sheet-roll-name
+  name-base(right)
+
+.sheet-rolltemplate-ironcrunch_progress .sheet-vow-name
+  name-base(left)
+
+.sheet-rolltemplate-ironcrunch_moves .sheet-roll-container,
+.sheet-rolltemplate-ironcrunch_progress .sheet-roll-container
+  background #33323c
+  color white
+  font-size 1em
+  font-family Roboto, Verdana, Arial, sans-serif
+  border 1px solid black
+
+.sheet-rolltemplate-ironcrunch_moves .sheet-result-row,
+.sheet-rolltemplate-ironcrunch_progress .sheet-result-row
+  display flex
+  justify-content space-between
+
+.sheet-rolltemplate-ironcrunch_moves .inlinerollresult,
+.sheet-rolltemplate-ironcrunch_progress .inlinerollresult
+  display inline-block
+  min-width 1.5em
+  text-align center
+  border 2px solid #33323c
+  background transparent
+  border-radius 1em
+
+.sheet-rolltemplate-ironcrunch_progress .sheet-roll-outcome,
+.sheet-rolltemplate-ironcrunch_moves .sheet-roll-outcome
+  background #403f4b
+  border 1px solid black
+
+.sheet-rolltemplate-ironcrunch_moves .sheet-subheader,
+.sheet-rolltemplate-ironcrunch_progress .sheet-subheader
+  sub-base(#23222b, 0.4em 0em 0.4em 1em)
+
+.sheet-rolltemplate-ironcrunch_moves .sheet-subfooter,
+.sheet-rolltemplate-ironcrunch_progress .sheet-subfooter
+  sub-base(#403f4b, 0.4em 0em 0.4em 0em)
+  width 100%
+
+.sheet-rolltemplate-ironcrunch_moves .sheet-result-body,
+.sheet-rolltemplate-ironcrunch_progress .sheet-result-body
+  padding 0.4em 1em 0.4em 1em
+
+.sheet-rolltemplate-ironcrunch_moves .sheet-alert,
+.sheet-rolltemplate-ironcrunch_progress .sheet-alert
+  outcome-base(#761818)
+
+.sheet-rolltemplate-ironcrunch_moves .sheet-opportunity,
+.sheet-rolltemplate-ironcrunch_progress .sheet-opportunity
+  outcome-base(#008a81)
+
+.sheet-rolltemplate-ironcrunch_moves .sheet-strong-hit,
+.sheet-rolltemplate-ironcrunch_progress .sheet-strong-hit
+  outcome-base(#1db980)
+
+.sheet-rolltemplate-ironcrunch_moves .sheet-weak-hit,
+.sheet-rolltemplate-ironcrunch_progress .sheet-weak-hit
+  outcome-base(#37efb9)
+
+.sheet-rolltemplate-ironcrunch_moves .sheet-miss,
+.sheet-rolltemplate-ironcrunch_progress .sheet-miss
+  outcome-base(#e30d46)
+
+.sheet-rolltemplate-ironcrunch_moves .sheet-complication,
+.sheet-rolltemplate-ironcrunch_progress .sheet-complication
+  outcome-base(#ec457d)
+
+.sheet-rolltemplate-ironcrunch_moves .userscript-tcat,
+.sheet-rolltemplate-ironcrunch_progress .userscript-tcat
+  font-weight 900
