--- a/Ironcrunch/src/workers/Ironcrunch.pug
+++ b/Ironcrunch/src/workers/Ironcrunch.pug
@@ -252,9 +252,22 @@ script(type="text/worker")
   |   });
   | });
 
+  | on('change:companion_page_button', function(eventinfo) {
+  |   setAttrs({
+  |     companion_page: eventinfo.newValue
+  |   });
+  | });
+
+  | on('change:shared_page_button', function(eventinfo) {
+  |   setAttrs({
+  |     shared_page: eventinfo.newValue
+  |   });
+  | });
+
   | on('change:mode_button', function(eventinfo) {
   |   setAttrs({
-  |     mode: eventinfo.newValue
+  |     mode: eventinfo.newValue,
+  |     modes_choice: 'off'
   |   });
   | });
 
