--- a/Ironcrunch/src/components/header/companion.pug
+++ b/Ironcrunch/src/components/header/companion.pug
@@ -3,8 +3,8 @@ div.sheet-header
   div.sheet-header-items
     div.sheet-character-name
       h3.sheet-character-title COMPANION
-      input(type='text' class='sheet-pc-name' name='attr_character_name' placeholder='Character Name')
+      input(type='text' class='sheet-pc-name' name='attr_companion_name' placeholder='Companion Name')
     div.sheet-character-role
       h3.sheet-character-title ROLE / TITLE
-      input(type='text' class='sheet-pc-name' name='attr_character_role' placeholder='Character Role / Title')
-  include ../resources/resources
+      input(type='text' class='sheet-pc-name' name='attr_companion_role' placeholder='Companion Role / Title')
+  include ../resources/companion
