--- a/Ironcrunch/src/pages/character/proficiencies.pug
+++ b/Ironcrunch/src/pages/character/proficiencies.pug
@@ -1,4 +1,4 @@
 input(type='radio' name='attr_character_page' class='sheet-proficiencies sheet-hide' value='4')
 div.sheet-proficiencies.sheet-hide
   h3.sheet-divide &emsp;WEAPON PROFICIENCIES&emsp;
-  include ../components/proficiencies/weapons
+  include ../../components/proficiencies/weapons
