--- a/Ironcrunch/src/roll-templates/mixins/body.pug
+++ b/Ironcrunch/src/roll-templates/mixins/body.pug
@@ -1,22 +1,16 @@
 mixin challengeDice
-  tr
-    td
-      span Challenge Dice: 
-    td
-      span {{challenge1}} {{challenge2}}
+  div.sheet-result-body.sheet-result-row
+    div Challenge Dice: 
+    div {{challenge1}} {{challenge2}}
 
 mixin actionBody
-  tr
-    td
-      span Action Score: 
-    td
-      span {{action}}
+  div.sheet-result-body.sheet-result-row
+    div Action Score: 
+    div {{action}}
   +challengeDice
 
 mixin vowBody
-  tr
-    td
-      span Vow Progress: 
-    td
-      span {{vow}}
+  div.sheet-result-body.sheet-result-row
+    div Vow Progress: 
+    div {{vow}}
   +challengeDice
