--- a/Ironcrunch/src/roll-templates/mixins/negations.pug
+++ b/Ironcrunch/src/roll-templates/mixins/negations.pug
@@ -1,17 +1,15 @@
 mixin actionDieNegated
-  tr
+  div.sheet-result-row
     td Previous Action Score:
     td {{action}}
-  tr
-      td(colspan="2" class="sheet-subfooter sheet-alert") Action die cancelled for matching negative momentum.
-  tr
+  div.sheet-result-row
+    div.sheet-subfooter.sheet-alert Action die cancelled for matching negative momentum.
+  div.sheet-result-row
     td Stat + Add:
     td {{stat}} + {{add}}
-  tr
-    td New Action Score:
-    td {{modifiers}}
-  tr
-    td
-      span Challenge Dice:
-    td
-      span {{challenge1}} {{challenge2}}
+  div.sheet-result-row
+    div New Action Score:
+    div {{modifiers}}
+  div.sheet-result-row
+    div Challenge Dice:
+    div {{challenge1}} {{challenge2}}
