added companion details

--- a/Ironcrunch/src/components/details/details.styl
+++ b/Ironcrunch/src/components/details/details.styl
@@ -4,10 +4,12 @@
   display flex
   justify-content space-evenly
 
+.sheet-companion-detail,
 .sheet-character-detail
   border 2px solid #4C4D4F
   width 100%
   padding: 0em 1em 0em 1em;
+  margin: 0.1em;
   p
     width 100%
     font-family Montserrat, arial, sans-serif
@@ -15,6 +17,8 @@
   input
     width 100%
     border 0
+    padding 0
+    outline-width: 0px;
 
 .sheet-detail-columns
   display flex
