--- a/Ironcrunch/src/components/stats/stats.styl
+++ b/Ironcrunch/src/components/stats/stats.styl
@@ -3,7 +3,7 @@
   justify-content: space-evenly
   align-items: center
   border-radius: 0%
-  margin-bottom: 2px
+  margin-bottom 1em
   margin-top 1em
 
 .sheet-stat
@@ -25,3 +25,12 @@
   height: 50px !important
   border: 2px solid #4C4D4F
   border-radius: 0
+
+label.sheet-roll-label
+  margin 0
+  padding 0em 0.4em 0em 0.4em
+  width auto
+  border 2px solid #4C4D4F
+  cursor pointer
+  &:hover
+    background #ccc
