--- a/Ironcrunch/src/components/resources/companion.pug
+++ b/Ironcrunch/src/components/resources/companion.pug
@@ -19,7 +19,7 @@ div.sheet-resources
         option(value=val)=`+${val}`
 
   div.sheet-resource
-    h2.sheet-resource-title SUPPLY
-    select(class="sheet-resource-value" name='attr_supply')
-      each val  in trackValuesTen
-        option(value=val)=`+${val}`
+    h2.sheet-resource-title LOAD
+    select(class="sheet-resource-value sheet-load-value" name='attr_load')
+      each val in trackValuesTwelve
+        option(value=val)=val
