--- a/GURPS/gurps.css
+++ b/GURPS/gurps.css
@@ -1848,6 +1848,12 @@ input.sheet-box-techniques-new[value="0"] + div.sheet-techniques-revised {
 /* -- COMBAT -- */
 .sheet-active-defense { width: calc(100% - 140px - 0.8em); }
 
+/* hide checkbox if modifying row */
+.sheet-active-defense .repcontainer.ui-sortable.editmode .sheet-toggle-highlight {
+    opacity: 0;
+    z-index: -1;
+}
+
 .sheet-active-defense .sheet-margin-left {
     margin-left: 43px;
 }
