--- a/Fading Suns v2.75/Fading_Suns_v2.75.css
+++ b/Fading Suns v2.75/Fading_Suns_v2.75.css
@@ -1016,10 +1016,6 @@ input.sheet-fs-beneficeaffliction {
 .sheet-fs-skill + .sheet-fs-col {
     width: 100%;
 }
-.sheet-fs-skill button {
-    height: 15px;
-}
-
 .sheet-fadingsuns button[type=roll] {
     margin: 0 0 0 0;
 }
@@ -1228,6 +1224,7 @@ button[type="roll"].sheet-fs-hidden {
     display: none;
 }
 
+/*
 button[type="roll"].sheet-fs-d20:before {
     content: ' ';
 }
@@ -1257,7 +1254,7 @@ button[type="roll"].sheet-fs-d20 {
     border-style: none;
     background-color: transparent;
     padding-right: 20px;
-}
+}*/
 
 
 
@@ -1278,7 +1275,6 @@ button.sheet-fs-dot {
     cursor: pointer;
     width: 12px;
     height: 12px;
-    /*border-radius: 50%;*/
     display: flex;
     justify-content: center;
     align-items: center;
@@ -1293,12 +1289,14 @@ button.sheet-fs-dot {
   button.sheet-fs-dot > span {
     width: 8px;
     height: 8px;
-    /*border-radius: 50%;*/
     background: buttontext;
     background-color: #4a6486;
   }
   
   /* Hide the "checked" section of the radio if the hidden attribute value is greater than the button value */
+  input.sheet-fs-dot[value="0"] ~ button.sheet-fs-gt-0 > span.sheet-fs-checked {
+    display: none;
+  }
   input.sheet-fs-dot[value="1"] ~ button.sheet-fs-gt-1 > span.sheet-fs-checked {
     display: none;
   }
