--- a/GURPS/gurps.css
+++ b/GURPS/gurps.css
@@ -1943,9 +1943,13 @@ input.sheet-box-techniques-new[value="0"] + div.sheet-techniques-revised {
     left: 22px;
 }
 
+.sheet-row-static-defense {
+    position: relative;
+}
+
 .sheet-active-defense .sheet-toggle-notes.sheet-static-defense {
     position: absolute;
-    left: 54px;
+    left: 22px;
 }
 
 .sheet-box.sheet-active-defense .sheet-toggle.sheet-toggle-notes ~ .sheet-checkbox {
@@ -1953,7 +1957,8 @@ input.sheet-box-techniques-new[value="0"] + div.sheet-techniques-revised {
 }
 
 .sheet-box.sheet-active-defense .sheet-toggle.sheet-toggle-notes ~ .sheet-checkbox.sheet-static-defense {
-    left: 54px;
+    position: absolute;
+    left: 22px;
 }
 
 /* Text Area Box Styling for Defense Bonus (DB) Notes*/
