Changed range modifers from checkboxes into radio buttons, so only once can be selected at a time

--- a/AD&D 2E Revised/2EStyle.css
+++ b/AD&D 2E Revised/2EStyle.css
@@ -158,6 +158,7 @@ input.sheet-tab:not(:first-child)::before
 }
 
 /* Fake checkbox */
+input[type="radio"] + span::before,
 input[type="checkbox"] + span::before
 {
     content: "";
@@ -170,6 +171,8 @@ input[type="checkbox"] + span::before
     -webkit-border-radius: 3px;
     border-radius: 3px;
 }
+
+input[type="radio"] + span::before,
 input[type="checkbox"] + span::before
 {
     margin-right: 4px;
@@ -193,30 +196,10 @@ input[type="checkbox"] + span::before
     background: radial-gradient(#f6f6f6, #dfdfdf);
 }
 
+input[type="radio"]:checked + span::before,
 input[type="checkbox"]:checked + span::before
 {
     content: "✓";
-}
-
-input[type="radio"] + span::before
-{
-    margin-right: 4px;
-    border: solid 1px #a8a8a8;
-    line-height: 14px;
-    text-align: center;
-    display: inline-block;
-    vertical-align: middle;
-    
-    -moz-box-shadow: 0 0 2px #ccc;
-    -webkit-box-shadow: 0 0 2px #ccc;
-    box-shadow: 0 0 2px #ccc;
-    
-    background: #f6f6f6;
-    background: -moz-radial-gradient(#f6f6f6, #dfdfdf);
-    background: -webkit-radial-gradient(#f6f6f6, #dfdfdf);
-    background: -ms-radial-gradient(#f6f6f6, #dfdfdf);
-    background: -o-radial-gradient(#f6f6f6, #dfdfdf);
-    background: radial-gradient(#f6f6f6, #dfdfdf);
 }
 
 div[class^="sheet-section"] {     
@@ -1180,6 +1163,7 @@ button {
     padding-left: 5px;
 }
 
+label input[type="radio"],
 label input[type="checkbox"] {
     position: absolute;
     width: 0;
