added placeholder images

--- a/Ironcrunch/src/components/details/details.styl
+++ b/Ironcrunch/src/components/details/details.styl
@@ -3,12 +3,19 @@
 .sheet-details-row
   display flex
   justify-content space-evenly
+  .sheet-details-header
+    color white
+    background #4C4D4F
+
+.sheet-companion-detail + .sheet-details-header,
+.sheet-character-detail + .sheet-details-header
+  background #4C4D4F
 
 .sheet-companion-detail,
 .sheet-character-detail
   border 2px solid #4C4D4F
   width 100%
-  padding: 0em 1em 0em 1em;
+  padding: 0em 1em 0em 1em
   margin: 0.1em;
   p
     width 100%
