--- a/Ironcrunch/src/pages/index.styl
+++ b/Ironcrunch/src/pages/index.styl
@@ -12,10 +12,11 @@ div.sheet-mode-title
   text-align center
 
 label.sheet-mode
-  border 2px solid #4C4D4F
+  // border 2px solid #4C4D4F
   margin 0em 1em 0em 1em
   padding 0
   cursor pointer
+  box-shadow 1px 1px 19px 6px rgba(0, 0, 0, 0.08)
   &:hover
     background #ccc
 
@@ -26,3 +27,9 @@ input[type=radio].sheet-shared-mode:checked ~ div.sheet-shared-mode
 
 input[type=checkbox].sheet-modes-show:checked ~ div.sheet-modes-show
   display block
+
+.sheet-modes
+  transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg);
+  opacity: 1;
+  transform-style: preserve-3d;
+  z-index: 5;
