--- a/Ironcrunch/src/pages/index.pug
+++ b/Ironcrunch/src/pages/index.pug
@@ -3,14 +3,18 @@ div.sheet-modes-show.sheet-hide
   div.sheet-mode-title
     h2.sheet-mode-title SELECT THE SHEET TYPE
   div.sheet-modes
-    label.sheet-mode CHARACTER
-      input(type='radio' name='attr_mode_button' class='sheet-hide' value='1')
+    div.sheet-mode
+      label.sheet-mode CHARACTER
+        input(type='radio' name='attr_mode_button' class='sheet-hide' value='1')
+      img(src)
 
-    label.sheet-mode COMPANION
-      input(type='radio' name='attr_mode_button' class='sheet-hide' value='2')
+    div.sheet-mode
+      label.sheet-mode COMPANION
+        input(type='radio' name='attr_mode_button' class='sheet-hide' value='2')
     
-    label.sheet-mode SHARED
-      input(type='radio' name='attr_mode_button' class='sheet-hide' value='3')
+    div.sheet-mode
+      label.sheet-mode SHARED
+        input(type='radio' name='attr_mode_button' class='sheet-hide' value='3')
 
 input(type='radio' name='attr_mode' class='sheet-character-mode sheet-hide' value='1')
 div.sheet-character-mode.sheet-hide
