Eclipse Phase Alternate v1.13.1 RC

--- a/Eclipse Phase Alternate/ep-sheet.css
+++ b/Eclipse Phase Alternate/ep-sheet.css
@@ -127,6 +127,10 @@ label {
     width: auto
 }
 
+p {
+    font-family: 'Montserrat', sans-serif;
+}
+
 input {
   background-color: transparent;
   color: #0C0C0C;
