Added "Body Modifications" (a.k.a. Cyberware) section

--- a/Fading Suns v2.75/Fading_Suns_v2.75.css
+++ b/Fading Suns v2.75/Fading_Suns_v2.75.css
@@ -1097,12 +1097,7 @@ h2.sheet-fs-clickheader {
 .sheet-fs-armors .sheet-fs-table .sheet-fs-table-head:nth-child(4),
 .sheet-fs-armors .sheet-fs-table .sheet-fs-table-head:nth-child(5),
 .sheet-fs-armors .sheet-fs-table .sheet-fs-table-head:nth-child(6),
-.sheet-fs-armors .sheet-fs-table .sheet-fs-table-head:nth-child(7) {
-    text-align: center;
-}
-.sheet-fs-armors .sheet-fs-table input:nth-child(1) {
-    font-weight: bold;
-}
+.sheet-fs-armors .sheet-fs-table .sheet-fs-table-head:nth-child(7),
 .sheet-fs-armors .sheet-fs-table input:nth-child(3),
 .sheet-fs-armors .sheet-fs-table input:nth-child(4),
 .sheet-fs-armors .sheet-fs-table input:nth-child(5),
@@ -1111,13 +1106,21 @@ h2.sheet-fs-clickheader {
 .sheet-fs-armors .sheet-fs-table input:nth-child(8) {
     text-align: center;
 }
+.sheet-fs-armors .sheet-fs-table input:nth-child(1) {
+    font-weight: bold;
+}
+
 .sheet-fs-armors fieldset, /* make preview similar */
 .sheet-fs-armors .repcontrol {
     margin-bottom:5px;
 }
 
-.sheet-fs-combatactions .sheet-fs-table { grid-template-columns: 1fr 1.5fr 2.5fr; }
-.sheet-fs-combatactions .sheet-fs-table input:nth-child(2) {
+.sheet-fs-combatstyles .sheet-fs-table { grid-template-columns: 1fr 25px 1fr 2.5fr; }
+.sheet-fs-combatstyles .sheet-fs-table .sheet-fs-table-head:nth-child(2),
+.sheet-fs-combatstyles .sheet-fs-table input:nth-child(2) {
+    text-align: center;
+}
+.sheet-fs-combatstyles .sheet-fs-table input:nth-child(3) {
     font-weight: bold;
 }
 
@@ -1125,17 +1128,15 @@ h2.sheet-fs-clickheader {
 .sheet-fs-psipowers .sheet-fs-table .sheet-fs-table-head:nth-child(3),
 .sheet-fs-psipowers .sheet-fs-table .sheet-fs-table-head:nth-child(7),
 .sheet-fs-psipowers .sheet-fs-table .sheet-fs-table-head:nth-child(8),
-.sheet-fs-psipowers .sheet-fs-table .sheet-fs-table-head:nth-child(9) {
-    text-align: center;
-}
-.sheet-fs-psipowers .sheet-fs-table input:nth-child(10) {
-    font-weight: bold;
-}
+.sheet-fs-psipowers .sheet-fs-table .sheet-fs-table-head:nth-child(9),
 .sheet-fs-psipowers .sheet-fs-table input:nth-child(9),
 .sheet-fs-psipowers .sheet-fs-table input:nth-child(13),
 .sheet-fs-psipowers .sheet-fs-table input:nth-child(14),
 .sheet-fs-psipowers .sheet-fs-table input:nth-child(15) {
     text-align: center;
+}
+.sheet-fs-psipowers .sheet-fs-table input:nth-child(10) {
+    font-weight: bold;
 }
 
 .sheet-fs-theurgyrites .sheet-fs-table { grid-template-columns: 30px 0.5fr 25px 1fr 80px 120px 60px 80px 80px 50px; }
@@ -1143,18 +1144,27 @@ h2.sheet-fs-clickheader {
 .sheet-fs-theurgyrites .sheet-fs-table .sheet-fs-table-head:nth-child(7),
 .sheet-fs-theurgyrites .sheet-fs-table .sheet-fs-table-head:nth-child(8),
 .sheet-fs-theurgyrites .sheet-fs-table .sheet-fs-table-head:nth-child(9),
-.sheet-fs-theurgyrites .sheet-fs-table .sheet-fs-table-head:nth-child(10) {
-    text-align: center;
-}
-.sheet-fs-theurgyrites .sheet-fs-table input:nth-child(10) {
-    font-weight: bold;
-}
+.sheet-fs-theurgyrites .sheet-fs-table .sheet-fs-table-head:nth-child(10),
 .sheet-fs-theurgyrites .sheet-fs-table input:nth-child(9),
 .sheet-fs-theurgyrites .sheet-fs-table input:nth-child(13),
 .sheet-fs-theurgyrites .sheet-fs-table input:nth-child(14),
 .sheet-fs-theurgyrites .sheet-fs-table input:nth-child(15),
 .sheet-fs-theurgyrites .sheet-fs-table input:nth-child(16) {
     text-align: center;
+}
+.sheet-fs-theurgyrites .sheet-fs-table input:nth-child(10) {
+    font-weight: bold;
+}
+
+.sheet-fs-bodymodifications .sheet-fs-table { grid-template-columns: 1fr 30px 100px; }
+.sheet-fs-bodymodifications .sheet-fs-table .sheet-fs-table-head:nth-child(2),
+.sheet-fs-bodymodifications .sheet-fs-table .sheet-fs-table-head:nth-child(3),
+.sheet-fs-bodymodifications .sheet-fs-table input:nth-child(2),
+.sheet-fs-bodymodifications .sheet-fs-table input:nth-child(3) {
+    text-align: center;
+}
+.sheet-fs-bodymodifications .sheet-fs-table input:nth-child(1) {
+    font-weight: bold;
 }
 
 .sheet-fs-carried .sheet-fs-table { grid-template-columns: 100%; }
@@ -1258,81 +1268,78 @@ button.sheet-fs-dot {
     justify-content: center;
     align-items: center;
     margin-right: 2px;
-  }
+}
 
-  button.sheet-fs-dot:hover,
-  button.sheet-fs-dot > span:hover {
+button.sheet-fs-dot:hover,
+button.sheet-fs-dot > span:hover {
     filter: sepia(100%) saturate(100%);
-  }
+}
   
-  button.sheet-fs-dot > span {
+button.sheet-fs-dot > span {
     width: 8px;
     height: 8px;
     background: buttontext;
     background-color: #4a6486;
-  }
+}
   
-  /* Hide the "checked" section of the radio if the hidden attribute value is greater than the button value */
-  input.sheet-fs-dot[value="0"] ~ button.sheet-fs-gt-0 > span.sheet-fs-checked {
+/* Hide the "checked" section of the radio if the hidden attribute value is greater than the button value */
+input.sheet-fs-dot[value="0"] ~ button.sheet-fs-gt-0 > span.sheet-fs-checked,
+input.sheet-fs-dot[value="1"] ~ button.sheet-fs-gt-1 > span.sheet-fs-checked,
+input.sheet-fs-dot[value="2"] ~ button.sheet-fs-gt-2 > span.sheet-fs-checked,
+input.sheet-fs-dot[value="3"] ~ button.sheet-fs-gt-3 > span.sheet-fs-checked,
+input.sheet-fs-dot[value="4"] ~ button.sheet-fs-gt-4 > span.sheet-fs-checked,
+input.sheet-fs-dot[value="5"] ~ button.sheet-fs-gt-5 > span.sheet-fs-checked,
+input.sheet-fs-dot[value="6"] ~ button.sheet-fs-gt-6 > span.sheet-fs-checked,
+input.sheet-fs-dot[value="7"] ~ button.sheet-fs-gt-7 > span.sheet-fs-checked,
+input.sheet-fs-dot[value="8"] ~ button.sheet-fs-gt-8 > span.sheet-fs-checked,
+input.sheet-fs-dot[value="9"] ~ button.sheet-fs-gt-9 > span.sheet-fs-checked,
+input.sheet-fs-dot[value="10"] ~ button.sheet-fs-gt-10 > span.sheet-fs-checked,
+input.sheet-fs-dot[value="11"] ~ button.sheet-fs-gt-11 > span.sheet-fs-checked,
+input.sheet-fs-dot[value="12"] ~ button.sheet-fs-gt-12 > span.sheet-fs-checked,
+input.sheet-fs-dot[value="13"] ~ button.sheet-fs-gt-13 > span.sheet-fs-checked,
+input.sheet-fs-dot[value="14"] ~ button.sheet-fs-gt-14 > span.sheet-fs-checked,
+input.sheet-fs-dot[value="15"] ~ button.sheet-fs-gt-15 > span.sheet-fs-checked,
+input.sheet-fs-dot[value="16"] ~ button.sheet-fs-gt-16 > span.sheet-fs-checked,
+input.sheet-fs-dot[value="17"] ~ button.sheet-fs-gt-17 > span.sheet-fs-checked,
+input.sheet-fs-dot[value="18"] ~ button.sheet-fs-gt-18 > span.sheet-fs-checked,
+input.sheet-fs-dot[value="19"] ~ button.sheet-fs-gt-19 > span.sheet-fs-checked,
+input.sheet-fs-dot[value="20"] ~ button.sheet-fs-gt-20 > span.sheet-fs-checked {
     display: none;
-  }
-  input.sheet-fs-dot[value="1"] ~ button.sheet-fs-gt-1 > span.sheet-fs-checked {
-    display: none;
-  }
-  input.sheet-fs-dot[value="2"] ~ button.sheet-fs-gt-2 > span.sheet-fs-checked {
-    display: none;
-  }
-  input.sheet-fs-dot[value="3"] ~ button.sheet-fs-gt-3 > span.sheet-fs-checked {
-    display: none;
-  }
-  input.sheet-fs-dot[value="4"] ~ button.sheet-fs-gt-4 > span.sheet-fs-checked {
-    display: none;
-  }
-  input.sheet-fs-dot[value="5"] ~ button.sheet-fs-gt-5 > span.sheet-fs-checked {
-    display: none;
-  }
-  input.sheet-fs-dot[value="6"] ~ button.sheet-fs-gt-6 > span.sheet-fs-checked {
-    display: none;
-  }
-  input.sheet-fs-dot[value="7"] ~ button.sheet-fs-gt-7 > span.sheet-fs-checked {
-    display: none;
-  }
-  input.sheet-fs-dot[value="8"] ~ button.sheet-fs-gt-8 > span.sheet-fs-checked {
-    display: none;
-  }
-  input.sheet-fs-dot[value="9"] ~ button.sheet-fs-gt-9 > span.sheet-fs-checked {
-    display: none;
-  }
-  input.sheet-fs-dot[value="10"] ~ button.sheet-fs-gt-10 > span.sheet-fs-checked {
-    display: none;
-  }
-  input.sheet-fs-dot[value="11"] ~ button.sheet-fs-gt-11 > span.sheet-fs-checked {
-    display: none;
-  }
-  input.sheet-fs-dot[value="12"] ~ button.sheet-fs-gt-12 > span.sheet-fs-checked {
-    display: none;
-  }
-  input.sheet-fs-dot[value="13"] ~ button.sheet-fs-gt-13 > span.sheet-fs-checked {
-    display: none;
-  }
-  input.sheet-fs-dot[value="14"] ~ button.sheet-fs-gt-14 > span.sheet-fs-checked {
-    display: none;
-  }
-  input.sheet-fs-dot[value="15"] ~ button.sheet-fs-gt-15 > span.sheet-fs-checked {
-    display: none;
-  }
-  input.sheet-fs-dot[value="16"] ~ button.sheet-fs-gt-16 > span.sheet-fs-checked {
-    display: none;
-  }
-  input.sheet-fs-dot[value="17"] ~ button.sheet-fs-gt-17 > span.sheet-fs-checked {
-    display: none;
-  }
-  input.sheet-fs-dot[value="18"] ~ button.sheet-fs-gt-18 > span.sheet-fs-checked {
-    display: none;
-  }
-  input.sheet-fs-dot[value="19"] ~ button.sheet-fs-gt-19 > span.sheet-fs-checked {
-    display: none;
-  }
-  input.sheet-fs-dot[value="20"] ~ button.sheet-fs-gt-20 > span.sheet-fs-checked {
-    display: none;
-  }
+}
+
+/* UNUSED YET
+.sheet-fs-tooltip {
+    position: relative;
+    display: inline-block;
+}
+.sheet-fs-tooltip .sheet-fs-tooltiptext {
+    visibility: hidden;
+    width: 120px;
+    background-color: #555;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+    position: absolute;
+    z-index: 1;
+    bottom: 125%;
+    left: 50%;
+    margin-left: -60px;
+    opacity: 0;
+    transition: opacity 0.3s;
+}
+.sheet-fs- .sheet-fs-tooltiptext::after {
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: #555 transparent transparent transparent;
+}
+.sheet-fs-tooltip:hover .sheet-fs-tooltiptext {
+    visibility: visible;
+    opacity: 1;
+}
+*/
