[Agon Official] Support the final boon checkbox

--- a/Agon Official/agon.css
+++ b/Agon Official/agon.css
@@ -14,14 +14,12 @@
 .sheet-container {
   position: relative;
   max-width: 1190px;
-  min-width: 830px;
+  min-width: 860px;
 }
 
 div,
 span,
 textarea,
-ul,
-li,
 span,
 label {
   box-sizing: border-box;
@@ -30,6 +28,7 @@ label {
 select {
   font-size: 12px;
   line-height: 1;
+  border-radius: 0;
   margin: 0;
   padding: 0;
 }
@@ -129,33 +128,6 @@ input[type="radio"] + span {
   cursor: pointer;
   display: inline-block;
   transition: all 0.2s, opacity 0s;
-}
-
-ul {
-  list-style: none;
-  margin: 0;
-}
-
-button[type="roll"].sheet-inherit,
-input[type="text"].sheet-inherit {
-  font: inherit;
-  color: inherit;
-  border: none;
-  padding: 0;
-  text-transform: inherit;
-  letter-spacing: inherit;
-}
-
-.sheet-space-after::after {
-  content: " ";
-}
-
-.sheet-colon-after::after {
-  content: ": ";
-}
-
-.sheet-sentence-end::after {
-  content: ". ";
 }
 
 .sheet-logo {
@@ -681,7 +653,7 @@ input.sheet-zero:checked + span {
   gap: 5px;
   padding-left: 5px;
   grid-template: auto/ 22% 32% 1fr;
-  font-size: 10px;
+  font-size: 12px;
 }
 
 .sheet-namebox .sheet-content label {
@@ -755,6 +727,8 @@ input.sheet-zero:checked + span {
 
 .sheet-info select {
   width: 45px;
+  height: 100%;
+  border-left: 2px solid black;
 }
 
 .sheet-honored-god {
@@ -849,7 +823,7 @@ button[type=roll].sheet-domain-button-resolve_spirit {
   width: 39px;
   border-width: 2px 2px 2px 0;
   height: 100%;
-  border-color: black;
+  border: 2px solid black;
 }
 
 .charsheet .sheet-domains .sheet-domain {
@@ -1014,6 +988,7 @@ button[type=roll].sheet-domain-button-resolve_spirit {
   text-transform: uppercase;
   font-size: 12px;
   font-family: 'Della Respira', serif;
+  padding: 0 1px;
   margin-bottom: 5px;
 }
 
