Fixed styling of a few table inputs

--- a/AD&D 2E Revised/2EStyle.css
+++ b/AD&D 2E Revised/2EStyle.css
@@ -90,11 +90,17 @@
     display: inline-block;
     width: 4.1em;
 }
+
+.charsheet select.sheet-table-dynamic,
 .charsheet input.sheet-table-dynamic {
     display: inline-block;
     width: 0;
     min-width: 100%;
     box-sizing: border-box;
+}
+
+.charsheet select.sheet-table-dynamic {
+    margin: 0;
 }
 
 .charsheet input[type="number"].sheet-tiny {
@@ -124,13 +130,7 @@
     width: 74px;
 }
 
-.charsheet select.sheet-table-dynamic {
-    display: inline-block;
-    margin: 0 0;
-    width: 0;
-    min-width: 100%;
-    box-sizing: border-box;
-}
+
 
 input.sheet-arrow
 {
