Removed unused and non existing header styling

--- a/AD&D 2E Revised/2EStyle.css
+++ b/AD&D 2E Revised/2EStyle.css
@@ -463,7 +463,7 @@ label {
     padding: 0 0 0 0;
 }
 
-h2,h3,h4,h5,h6,h7,h8,h9 {
+h2,h3,h4,h5,h6 {
     line-height:1em;
 	margin:inherit;
 	display:inline;
