--- a/GURPS/gurps.css
+++ b/GURPS/gurps.css
@@ -1366,6 +1366,22 @@ input[type="checkbox"][name="attr_toggle_turn_deceleration"]:not(:checked) ~ div
 .sheet-traits .sheet-col4 { width: 60px; }
 .sheet-traits .sheet-row-stats .sheet-col0 { margin-left: 20px; width: calc(100% - 157px); }
 
+.sheet-perks-area .sheet-col4 {
+    width: 57px;
+}
+
+.sheet-perks-area .repcontrol {
+    margin-right: 5px;
+}
+
+.sheet-quirks-area .repitem {
+    margin-left: 5px;
+}
+
+.sheet-quirks-area .repcontrol {
+    margin-left: 5px;
+}
+
 /* -- if edit mode, hide toggle notes -- */
 .sheet-traits .repcontainer.ui-sortable.editmode .sheet-checkbox,
 .sheet-traits .repcontainer.ui-sortable.editmode .sheet-toggle {
