Added Sheet Styles

--- a/GURPS/gurps.css
+++ b/GURPS/gurps.css
@@ -1,7 +1,23 @@
-.charsheet {
-    --main-text:black;          /*Main text font*/
+/*
+To add a sheet style:
+
+* Add a CSS rule for .sheeet-color-setting-X ~ .sheet-wrapper , were X is the following number to the highest one from the available styles.
+    - Within it, set the CSS variables for the colors to use, use the existing styles as a baseline to simplify this. 
+* Add a color-setting <input> element at the begging of the sheet HTML, directly before sheet-wrapper, using the same number X you've used on the CSS rule
+* Increase by one the StyleCount variable at the start of the sheet worker at the begining of the sheet HTML (it should be one higher than X)
+* Go to  <select name="attr_sheetstyle"/> on the sheet HTML to add a new option, with X as value, and the name you wish to give the style
+
+*/
+
+.sheet-color-setting{
+    display: none;
+}
+
+.sheet-color-setting-0:checked ~  .sheet-wrapper{  /* Sets the values for the variables if their respective style is selected, add one to add a new style*/
+    --main-text:black;          
     --highlight-text:black;
     --secondary-highlight:#334739;
+    --point-label-text:#4f91cd;
     --header-text:white;
     --sheet-bg: white;
     --box-bg:#5f8c86;
@@ -10,6 +26,64 @@
     --odd-row-bg:#7da8a2;
     --input-disabled-bg:#c9c9c9;
     --border-color:#033530;
+}
+.sheet-color-setting-1:checked ~  .sheet-wrapper{
+    --main-text:black;          
+    --highlight-text:black;
+    --secondary-highlight:#333547;
+    --point-label-text:#1c33b7;
+    --header-text:white;
+    --sheet-bg: white;
+    --box-bg:#5f768c;
+    --header-bg:#346079;
+    --row-bg:#8ea3bc;
+    --odd-row-bg:#7d90a8;
+    --input-disabled-bg:#c9c9c9;
+    --border-color:#033530;
+}
+.sheet-color-setting-2:checked ~  .sheet-wrapper{
+    --main-text:black;
+    --highlight-text:#8b0000;
+    --secondary-highlight: #9b5555;
+    --point-label-text:#4f91cd;
+    --sheet-bg: white;
+    --box-bg:#DDDDCC;
+    --header-bg:#FFFFF4;
+    --row-bg:#B1B1A5;
+    --odd-row-bg:#999991;
+    --border-color:#033530;
+    --input-disabled-bg:#DDDDDD;
+    --header-text:black;
+
+}
+
+.sheet-color-setting-3:checked ~  .sheet-wrapper{
+    --main-text:black;
+    --highlight-text:#8b0000;
+    --secondary-highlight: #9b5555;
+    --point-label-text:#4f91cd;
+    --sheet-bg: white;
+    --header-bg:#AAAAAA;
+    --row-bg:#DFDFDF;
+    --odd-row-bg:#CFCFCF;
+    --border-color:#033530;
+    --input-disabled-bg:#FFFFFF;
+    --header-text:white;
+}
+
+.sheet-color-setting-4:checked ~  .sheet-wrapper{
+    --main-text:black;
+    --highlight-text:#8b0000;
+    --secondary-highlight: #9b5555;
+    --point-label-text:black;
+    --sheet-bg: white;
+    --header-bg:#DDDDDD;
+    --border-color:#033530;
+    --input-disabled-bg:#FFFFFF;
+    --header-text:black;
+}
+.sheet-wrapper {
+    
     color:var(--main-text);
     background: var(--sheet-bg);
     min-height: 100%;
@@ -17,6 +91,10 @@
 
 .sheet-wrapper {
     min-width: 852px;
+}
+
+.uneditable-input{
+    background-color: white;
 }
 
 .sheet-box {
@@ -63,7 +141,7 @@
 
 .sheet-section-heading.sheet-combat-tools .sheet-header {
     font-size: 15px;
-    color: white;
+    color: var(--header-text);
     background: var(--header-bg);
 }
 
@@ -154,6 +232,10 @@ input[name="attr_announcements_hide"][value="1"] ~ .sheet-update-alert {
     font-size: 11px;
 }
 
+
+.sheet-wrapper button[type=roll]{
+    box-shadow: none!important;
+}
 /* Default d6 for all skill rolls */
 .sheet-wrapper button[type=roll]::before {
     font-family: "dicefontd6";
@@ -311,7 +393,7 @@ input.sheet-range-damage-dice-icon[value="d4skull"] ~ button[type=roll].roll_dam
 .sheet-row {
     height: 22px;
     width: 100%;
-    display: flex;
+    display: flex !important;
     flex-wrap: wrap;
     align-items: center;
     margin-top: 2px;
@@ -352,7 +434,7 @@ input.sheet-range-damage-dice-icon[value="d4skull"] ~ button[type=roll].roll_dam
 
 /* ===== ROW COLOURING ===== */
 input {
-    background: transparent;
+    background: rgba(255, 255, 255, 0.39);
 }
 
 .charsheet .sheet-row input[readonly], 
@@ -1195,7 +1277,7 @@ input.sheet-module-roll:checked ~ .sheet-wrapper .sheet-module-off-roll,
 .sheet-points .sheet-row .sheet-col0 { width: 60px; }
 .sheet-points .sheet-row .sheet-col1 { width: 40px; }
 .sheet-points .sheet-row .sheet-unspent-points-label {
-    color: #4f91cd;
+    color: var(--point-label-text);
 }
 .sheet-points .sheet-row .sheet-unspent-points input {
     font-size: 14px;
@@ -1306,7 +1388,7 @@ input.sheet-toggle-unspoint-points[value="0"] ~ .sheet-row-total {
 
 .sheet-movement-feats .sheet-header {
     font-size: 15px;
-    color: white;
+    color: var(--header-text);
     background: var(--header-bg);
     margin-bottom: 5px;
 }
@@ -1357,7 +1439,7 @@ input.sheet-toggle-unspoint-points[value="0"] ~ .sheet-row-total {
 .sheet-container-feats .sheet-container-flying {
     margin-left: 8px;
 }
-.sheet-container-swimming, .sheet-container-flying,.sheet-container-jumping{ max-width: 18rem;}
+.sheet-container-swimming, .sheet-container-flying,.sheet-container-jumping{ max-width: 30%;}
 .sheet-container-feats .sheet-container-swimming {
     margin-left: 16px;
 }
